p3/confs/argocd/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  labels:
    app: argocd
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /argocd
        backend:
          serviceName: argocd-server
          servicePort: 80

            #---
            #apiVersion: networking.k8s.io/v1
            #kind: Ingress
            #metadata:
            #  name: argocd-ingress
            #  namespace: argocd
            #  labels:
            #    app: argocd
            #  annotations:
            #    ingress.kubernetes.io/ssl-redirect: "false"
            #    kubernetes.io/ingress.class: "traefik"
            #    traefik.frontend.rule.type: PathPrefixStrip
            #spec:
            #  rules:
            #  - host: argocd.k3d
            #    http:
            #      paths:
            #      - pathType: Prefix
            #        path: /argocd
            #        backend:
            #          service:
            #            name: argocd-server
            #            port:
            #              number: 80
            #
